--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   let isExist = false;
   for (let element of elements) {
-    if (element.textContent.trim().toLowerCase() === group.toLowerCase()) {
+    if (element.textContent.trim().toLowerCase() === group.trim().toLowerCase()) {
       isExist = true;
       break;
     }
