--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
     const newItem = document.createElement('li');
     newItem.textContent = group;
     list.appendChild(newItem);
+    // clear input
+    input.value = '';
   }
 }
 
